# k8sec

./: Cargo.toml
src/: cli.rs  kubectl.rs  main.rs  pull_command.rs
